# KinectAzureDKProgramming

./: .gitignore  CMakeLists.txt  README.md  Util.cpp  Util.h
Aruco_TwoKinects_Calibration_Extrinsics/: CMakeLists.txt  Source_TwoKinects_Calibration.cpp
OpenCV_OneKinect/: CMakeLists.txt
OpenGL_GLFW_GLEW_ArUco_AR/: CMakeLists.txt
OpenGL_GLFW_GLEW_PointCloudRenderer/: CMakeLists.txt
OpenGL_GLUT_ArUco_AR/: CMakeLists.txt
OpenGL_GLUT_ShowImage/: CMakeLists.txt
cmake/: azure-kinect-sensor-sdk-config-version.cmake  azure-kinect-sensor-sdk-config.cmake
